--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -7,8 +7,8 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi! I'm <strong>Mohamed Debbagh</strong>, Welcome to my page.</h2>
-  <p>Adapted for Jekyll by <a href=https://chrisbobbe.github.io/>Chris Bobbe</a>. Get started on <a href="https://github.com/chrisbobbe/jekyll-theme-prologue">GitHub!</a></p>
+  <h2 class="alt">Hi, I'm <strong>Mohamed Debbagh</strong>! Welcome to my page.</h2>
+  <p>I am a graduate researcher and PhD candidate at McGill University. My primary research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre.<strong></p>
 </header>
 
 <footer>
