--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt">Hi, I'm <strong>Mohamed Debbagh</strong>! Welcome to my page.</h2>
-  <p>I am a graduate researcher and PhD candidate at McGill University.</p>
+  <h3>I am a graduate researcher and PhD candidate at McGill University.</h3>
   <p>My primary research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre.<strong></p>  
 </header>
 
