--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -1,6 +1,6 @@
 ---
 title: Welcome!
-cover-photo: assets/images/banner_1.jpg
+cover-photo: assets/images/banner_2.png
 cover-photo-alt: example cover photo
 auto-header: none
 icon: fa-comment
