--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -7,8 +7,8 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt">Hi, I'm <strong>Mohamed Debbagh</strong>! Welcome to my page.</h2>
-  <h3>I am a <strong>Graduate researcher</strong> and <strong>PhD candidate</strong> at <strong>McGill University</strong>.</h3>
+  <h2 class="alt"><strong>MHi, I'm ohamed Debbagh! Welcome to my page.</strong></h2>
+  <h3>I am a Graduate researcher and <strong>PhD candidate at McGill University</strong>.</h3>
   <p>My primary research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre.<strong></p>  
 </header>
 
