--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -7,9 +7,9 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"><strong>MHi, I'm ohamed Debbagh! Welcome to my page.</strong></h2>
-  <h3>I am a Graduate researcher and <strong>PhD candidate at McGill University</strong>.</h3>
-  <p>My primary research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre.<strong></p>  
+  <h2 class="alt"><strong>Hi, I'm Mohamed Debbagh! Welcome to my page.</strong></h2>
+  <h3><strong>I am a Graduate researcher and PhD candidate at McGill University</strong>.</h3>
+  <p>My primary research interests include <strong>Sensor Fusions and Machine Learning for Controlled Environment Agricultre.<strong></p>  
 </header>
 
 <footer>
