--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt"><strong>Hi, I'm Mohamed Debbagh! Welcome to my page.</strong></h2>
-  <h3><strong>I am a Graduate researcher and PhD candidate at McGill University</strong>.</h3>
+  <h3>I am a Graduate researcher and PhD candidate at McGill University.</h3>
   <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
 </header>
 
