--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -8,10 +8,9 @@ order: 1
 ---
 <header>
   <h2 class="alt"><strong>Hi, I'm Mohamed Debbagh! Welcome to my page.</strong></h2>
-  <h3>I am a Graduate researcher and PhD candidate at McGill University.</h3>
+  <h3>Graduate researcher and PhD candidate at McGill University.</h3>
   <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
 </header>
 
 <footer>
-  <a href="#portfolio" class="button scrolly">Magna Aliquam</a>
 </footer>
