--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -13,4 +13,5 @@ order: 1
 </header>
 
 <footer>
+  <h2 class="alt"><strong>Biomass Production Lab | Smart Production Systems Lab</strong></h2>
 </footer>
