--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -12,4 +12,4 @@ order: 1
   <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
 </header>
 
-<h4 class="alt"><strong>Biomass Production Lab | Smart Production Systems Lab</strong></h4>
+<h4 class="alt"><strong><a href="#portfolio" class="button scrolly">Biomass Production Lab </a>| <a href="#portfolio" class="button scrolly">Smart Production Systems Lab</strong></a></h4>
