--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -12,4 +12,4 @@ order: 1
   <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
 </header>
 
-<a href="#portfolio" class="button scrolly">Biomass Production Lab </a> <a href="#portfolio" class="button scrolly">Smart Production Systems Lab</a>
+<a href="https://www.mcgill.ca/biomass-production-lab/students" class="button scrolly"><strong>Biomass Production Lab</strong></a> <a href="https://shangpenglab.github.io/#/team" class="button scrolly"><strong>Smart Production Systems Lab</strong></a>
