--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -1,13 +1,10 @@
 ---
-title: Contact
+title: Contact Me
 icon: fa-envelope
 order: 5
 ---
 
-<p>Elementum sem parturient nulla quam placerat viverra
-mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+<p>Feel free to reach out to me!</p>
 
 <form method="post" action="https://formspree.io/f/xbjelapw">
   <div class="row">
