--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -7,7 +7,7 @@ icon: fa-comment
 order: 1
 ---
 <header>
-  <h2 class="alt"><strong>Hi, I'm Mohamed Debbagh! <br>Welcome to my page.</strong></h2>
+  <h2 class="alt">Hi, I'm <strong>Mohamed Debbagh</strong>! <br>Welcome to my page.</h2>
   <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
 </header>
 
