--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -12,3 +12,12 @@ order: 1
 </header>
 
 <a href="https://www.mcgill.ca/biomass-production-lab/students" class="button scrolly"><strong>Biomass Production Lab</strong></a> <a href="https://shangpenglab.github.io/#/team" class="button scrolly"><strong>Smart Production Systems Lab</strong></a>
+
+<script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
+<script>
+  kofiWidgetOverlay.draw('moha7108', 
+  { 'type': 'floating-chat',
+    'floating-chat.donateButton.text': 'Support me',
+    'floating-chat.donateButton.background-color': '#794bc4',
+    'floating-chat.donateButton.text-color': '#fff'});
+</script>
