--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -13,6 +13,7 @@ order: 1
 
 <a href="https://www.mcgill.ca/biomass-production-lab/students" class="button scrolly"><strong>Biomass Production Lab</strong></a> <a href="https://shangpenglab.github.io/#/team" class="button scrolly"><strong>Smart Production Systems Lab</strong></a>
 
+<div>
 <script src='https://storage.ko-fi.com/cdn/scripts/overlay-widget.js'></script>
 <script>
   kofiWidgetOverlay.draw('moha7108', 
@@ -21,3 +22,4 @@ order: 1
     'floating-chat.donateButton.background-color': '#794bc4',
     'floating-chat.donateButton.text-color': '#fff'});
 </script>
+</div>
