--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -18,3 +18,6 @@ order: 6
     </div>
   </div>
 </form>
+
+
+<iframe id='kofiframe' src='https://ko-fi.com/moha7108/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='moha7108'></iframe>
