--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -20,4 +20,4 @@ order: 6
 </form>
 
 
-<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe id='kofiframe' src='https://ko-fi.com/moha7108/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='moha7108'></iframe></div>
+<iframe id='kofiframe' src='https://ko-fi.com/moha7108/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='moha7108'></iframe>
