--- a/_sections/contact.html
+++ b/_sections/contact.html
@@ -19,5 +19,6 @@ order: 6
   </div>
 </form>
 
+<h3>Please consider supporting!</h3>
 
 <iframe id='kofiframe' src='https://ko-fi.com/moha7108/?hidefeed=true&widget=true&embed=true&preview=true' style='border:none;width:100%;padding:4px;background:#f9f9f9;' height='712' title='moha7108'></iframe>
