--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -4,6 +4,6 @@ icon: fa-user
 order: 3
 ---
 
-<a href="#" class="image featured"><img src="assets/images/propic.jpg" alt="" /></a>
+<a href="#" class="image featured"><img src="assets/images/10_wallpaper.jpg" alt="" /></a>
 
 <p>I am a Graduate researcher and PhD candidate at McGill University.</p>
