--- a/_sections/welcome.html
+++ b/_sections/welcome.html
@@ -8,7 +8,7 @@ order: 1
 ---
 <header>
   <h2 class="alt">Hi, I'm <strong>Mohamed Debbagh</strong>! <br>Welcome to my page.</h2>
-  <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agricultre</strong>.</p>  
+  <p>My research interests include <strong>Sensor Fusions</strong> and <strong>Machine Learning</strong> for <strong>Controlled Environment Agriculture</strong>.</p>  
 </header>
 
 <a href="https://www.mcgill.ca/biomass-production-lab/students" class="button scrolly"><strong>Biomass Production Lab</strong></a> <a href="https://shangpenglab.github.io/#/team" class="button scrolly"><strong>Smart Production Systems Lab</strong></a>
