--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -50,15 +50,15 @@ img {vertical-align: middle;}
 <p>Slideshow 1:</p>
 <div class="slideshow-container">
   <div class="mySlides1">
-    <img src="img_nature_wide.jpg" style="width:100%">
+    <img src="assets/images/pic02.jpg" style="width:100%">
   </div>
 
   <div class="mySlides1">
-    <img src="img_snow_wide.jpg" style="width:100%">
+    <img src="assets/images/pic03.jpg" style="width:100%">
   </div>
 
   <div class="mySlides1">
-    <img src="img_mountains_wide.jpg" style="width:100%">
+    <img src="assets/images/pic04.jpg" style="width:100%">
   </div>
 
   <a class="prev" onclick="plusSlides(-1, 0)">&#10094;</a>
