--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -69,8 +69,7 @@ img {vertical-align: middle;}
 }
 </style>
 
-<h2>Automatic Slideshow</h2>
-<p>Change image every 2 seconds:</p>
+<img src="assets/images/pic03.jpg" style="width:50%">
 
 <div class="slideshow-container">
 
@@ -119,6 +118,6 @@ function showSlides() {
   }
   slides[slideIndex-1].style.display = "block";  
   dots[slideIndex-1].className += " active";
-  setTimeout(showSlides, 5000); // Change image every 2 seconds
+  setTimeout(showSlides, 10000); // Change image every 2 seconds
 }
 </script>
