--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -69,7 +69,7 @@ img {vertical-align: middle;}
 }
 </style>
 
-<img src="assets/images/pic03.jpg" style="width:50%">
+<img src="assets/images/propic.jpg" style="width:50%">
 
 <div class="slideshow-container">
 
