--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -76,27 +76,76 @@ img {vertical-align: middle;}
 <div class="slideshow-container">
 
 <div class="mySlides fade">
-  <div class="numbertext">1 / 3</div>
-  <img src="assets/images/pic02.jpg" style="width:75%">
+  <div class="numbertext">1 / 10</div>
+  <img src="assets/images/slideshow/001.jpg" style="width:75%">
   <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">2 / 3</div>
-  <img src="assets/images/pic03.jpg" style="width:75%">
-  <div class="text">Caption Two</div>
+    <div class="numbertext">2 / 10</div>
+    <img src="assets/images/slideshow/002.jpg" style="width:75%">
+    <div class="text">Caption Text</div>
 </div>
 
 <div class="mySlides fade">
-  <div class="numbertext">3 / 3</div>
-  <img src="assets/images/pic04.jpg" style="width:75%">
-  <div class="text">Caption Three</div>
+  <div class="numbertext">3 / 10</div>
+  <img src="assets/images/slideshow/003.jpg" style="width:75%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">4 / 10</div>
+  <img src="assets/images/slideshow/004.jpg" style="width:75%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+    <div class="numbertext">5 / 10</div>
+    <img src="assets/images/slideshow/005.jpg" style="width:75%">
+    <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">6 / 10</div>
+  <img src="assets/images/slideshow/006.jpg" style="width:75%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">7 / 10</div>
+  <img src="assets/images/slideshow/007.jpg" style="width:75%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+    <div class="numbertext">8 / 10</div>
+    <img src="assets/images/slideshow/008.jpg" style="width:75%">
+    <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">9 / 10</div>
+  <img src="assets/images/slideshow/009.jpg" style="width:75%">
+  <div class="text">Caption Text</div>
+</div>
+
+<div class="mySlides fade">
+    <div class="numbertext">10 / 10</div>
+    <img src="assets/images/slideshow/010.jpg" style="width:75%">
+    <div class="text">Caption Text</div>
 </div>
 
 </div>
 <br>
 
 <div style="text-align:center">
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span>
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
+  <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
   <span class="dot"></span> 
