--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -71,7 +71,7 @@ img {vertical-align: middle;}
 
 <img src="assets/images/propic.jpg" style="width:35%">
 
-<br>
+<h3>Highlights</h3>
 
 <div class="slideshow-container">
 
