--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -71,16 +71,18 @@ img {vertical-align: middle;}
 
 <img src="assets/images/propic.jpg" style="width:35%">
 
-<p>I'm a researcher and developer with a passion for exploring novel solutions to problems faced in agriculture and global food systems. 
+<br>
+
+<p>
+    I'm a researcher and developer with a passion for exploring novel solutions to problems faced in agriculture and global food systems. 
     With projects completed primarily in robotics and precision agriculture, I have extensive experience with rapid development and prototyping solutions using various 
     techniques to solve complex challenges. Previous projects have included: optimization of controlled indoor fruit crop production, development of an Automated Liquid Nutrient 
     Analyzer for organic fertilizer recipe building,  and Computer vision for plant health assessment and prediction.
     
-    I am a currently a Ph.D. student in the department of Bioresource Engineering at McGill University. My current research revolves around the application of Machine Learning, 
-    through CV and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
+    I am a currently a Ph.D. candidate in the department of Bioresource Engineering at McGill University. My current research revolves around the application of Machine Learning, 
+    through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<br>
 <h3>Operations</h3>
 <br>
 
