--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -83,7 +83,7 @@ img {vertical-align: middle;}
     through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<h3>Operations</h3>
+<!-- <h3>Operations</h3> -->
 <br>
 
 <div class="slideshow-container">
