--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -83,22 +83,7 @@ img {vertical-align: middle;}
     through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<!-- <h3>Operations</h3> -->
-<!-- <br> -->
-
-<div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span>
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-  </div>
-
+<h4>Automatic slideshow</h4>
 <!-- <br> -->
 
 <div class="slideshow-container">
@@ -164,6 +149,21 @@ img {vertical-align: middle;}
 </div>
 
 </div>
+
+<!-- <br> -->
+
+<div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span>
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+  </div>
 
 
 <script>
