--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -83,8 +83,20 @@ img {vertical-align: middle;}
     through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<h5><i>Automatic slideshow</i></h5>
+<!-- <h5><i>Automatic slideshow</i></h5> -->
 <!-- <br> -->
+<div style="text-align:center">
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span>
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+    <span class="dot"></span> 
+  </div>
 
 <div class="slideshow-container">
 
@@ -152,18 +164,7 @@ img {vertical-align: middle;}
 
 <!-- <br> -->
 
-<div style="text-align:center">
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span>
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-    <span class="dot"></span> 
-  </div>
+
 
 
 <script>
