--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -17,6 +17,35 @@ img {vertical-align: middle;}
   margin: auto;
 }
 
+/* Style the left and right controls (arrows) */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+
+
 /* Caption text */
 .text {
   color: #f2f2f2;
@@ -160,6 +189,11 @@ img {vertical-align: middle;}
     <div class="text">Caption Text</div>
 </div>
 
+
+<!-- Left and right controls -->
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
 </div>
 
 <!-- <br> -->
@@ -187,4 +221,36 @@ function showSlides() {
   dots[slideIndex-1].className += " active";
   setTimeout(showSlides, 5000); // Change image every 2 seconds
 }
+
+// Next/previous controls
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+// Updated showSlides function
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+
+// Call showSlides to initiate the slideshow
+slideIndex = 1;
+showSlides(slideIndex);
+
+// Replace the existing setInterval function
+setInterval(function(){
+  plusSlides(1); // change slide every 5000ms
+}, 5000);
+
 </script>
