--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -181,6 +181,8 @@ order: 3
 <script>
 let slideIndex = 1;
 showSlides(slideIndex);
+autoShowSlides(); // Start the automatic slideshow
+
 
 function plusSlides(n) {
   showSlides(slideIndex += n);
@@ -207,4 +209,13 @@ function showSlides(n) {
   dots[slideIndex-1].className += " active";
   captionText.innerHTML = dots[slideIndex-1].alt;
 }
+
+
+function autoShowSlides() {
+  plusSlides(1);
+}
+
+setInterval(autoShowSlides, 2000); // Change image every 2 seconds
+
+
 </script>
