--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -79,6 +79,12 @@ order: 3
     color: white;
   }
   
+    /* Container for the scrolling gallery */
+  .row {
+    overflow-x: auto; /* Enables horizontal scrolling */
+    white-space: nowrap; /* Keeps the columns in a single line */
+  }
+  
   .row:after {
     content: "";
     display: table;
