--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -78,7 +78,7 @@ order: 3
     padding: 2px 16px;
     color: white;
   }
-  
+
     /* Container for the scrolling gallery */
   .row {
     overflow-x: auto; /* Enables horizontal scrolling */
@@ -95,6 +95,7 @@ order: 3
   .column {
     float: left;
     width: 16.66%;
+    display: inline-block; /* Ensures proper alignment within the container */
   }
   
   /* Add a transparency effect for thumnbail images */
