--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -74,7 +74,7 @@ order: 3
   /* Container for image text */
   .caption-container {
     text-align: center;
-    background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+    background-color: #222; /* Semi-transparent black */
     padding: 2px 16px;
     color: white;
   }
