--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -18,10 +18,10 @@ order: 3
     vertical-align: middle;
   }
   
-  /* Position the image container (needed to position the left and right arrows) */
+  /* Position the image container (needed to position the left and right arrows)
   .container {
     position: relative;
-  }
+  } */
   
   /* Hide the images by default */
   .mySlides {
