--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -79,6 +79,12 @@ order: 3
     color: white;
   }
 
+  .row {
+  display: flex; /* Use flexbox layout */
+  overflow-x: auto; /* Enables horizontal scrolling */
+  /* Remove any default padding or margin if necessary */
+  }
+
   .row:after {
     content: "";
     display: table;
