--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -122,7 +122,7 @@ order: 3
     through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<h2 style="text-align:center">Slideshow Gallery</h2>
+<!-- <h2 style="text-align:center">Slideshow Gallery</h2> -->
 
 <div class="container">
   <div class="mySlides">
