--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -95,6 +95,7 @@ order: 3
   .column {
     float: left;
     width: 16.66%;
+    flex-shrink: 0;
   }
   
   /* Add a transparency effect for thumnbail images */
