--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -123,7 +123,7 @@ order: 3
     through Computer Vision and sensor fusion, for assessing plant development to improve crop throughput in controlled environment agriculture.
 </p>
 
-<!-- <h2 style="text-align:center">Slideshow Gallery</h2> -->
+<h3 style="text-align:center">Here is a gallery highlighting some of my work!</h3>
 
 <div class="container">
 
