--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -26,6 +26,7 @@ order: 3
   /* Hide the images by default */
   .mySlides {
     display: none;
+    position: relative; /* Create a positioning context */
   }
   
   /* Add a pointer when hovering over the thumbnail images */
