--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -65,7 +65,7 @@ order: 3
   
   /* Number text (1/3 etc) */
   .numbertext {
-    color: #f2f2f2;
+    /* color: #f2f2f2; */
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
