--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -5,10 +5,10 @@ order: 3
 ---
 
 <style>
-  body {
+  /* body {
     font-family: Arial;
     margin: 0;
-  }
+  } */
   
   * {
     box-sizing: border-box;
