--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -14,10 +14,10 @@ order: 3
     vertical-align: middle;
   }
   
-  /* Position the image container (needed to position the left and right arrows)
-  .container {
+  /* Position the image container (needed to position the left and right arrows) */
+  .galcontainer {
     position: relative;
-  } */
+  }
   
   /* Hide the images by default */
   .mySlides {
@@ -122,7 +122,7 @@ order: 3
 
 <h3 style="text-align:center">Here is a gallery highlighting some of my work!</h3>
 
-<div class="container">
+<div class="galcontainer">
 
   <div class="galrow">
     <div class="galcolumn">
@@ -213,8 +213,8 @@ order: 3
     <p id="caption"></p>
   </div>
     
-  <!-- <a class="prev" onclick="plusSlides(-1)">❮</a>
-  <a class="next" onclick="plusSlides(1)">❯</a> -->
+  <a class="prev" onclick="plusSlides(-1)">❮</a>
+  <a class="next" onclick="plusSlides(1)">❯</a>
 
 
 </div>
