--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -39,7 +39,7 @@ order: 3
     width: auto;
     padding: 16px;
     margin-top: -50px;
-    color: white;
+    /* color: white; */
     font-weight: bold;
     font-size: 20px;
     border-radius: 0 3px 3px 0;
@@ -50,6 +50,11 @@ order: 3
   /* Position the "next button" to the right */
   .next {
     right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+
+  .prev {
+    left: 0;
     border-radius: 3px 0 0 3px;
   }
   
