--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -114,8 +114,8 @@ order: 3
 
   /* The switch - the box around the slider */
 .switch {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  /* display: inline-block; */
   width: 60px;
   height: 34px;
 }
