--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -115,6 +115,7 @@ order: 3
   /* The switch - the box around the slider */
 .switch {
   position: absolute;
+  top:20%;
   /* display: inline-block; */
   width: 60px;
   height: 34px;
