--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -144,7 +144,7 @@ order: 3
 
 .slider:before {
   position: absolute;
-  content: "";
+  content: "▶️";
   height: 26px;
   width: 26px;
   left: 4px;
@@ -155,6 +155,7 @@ order: 3
 }
 
 input:checked + .slider {
+  content:"⏸️";
   background-color: #2196F3;
 }
 
