--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -112,6 +112,9 @@ order: 3
 
 /* Style the button */
 .toggle-button {
+  position:absolute;
+  top:25%;
+  right:0;
   background-color: #2196F3; /* Blue background */
   border: none; /* No border */
   color: white; /* White text */
