--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -245,12 +245,18 @@ order: 3
     
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
-
-  <!-- <label class="switch">
-    <input type="checkbox" id="slideshowToggle" checked>
-    <span class="slider round"></span>
-  </label> -->
-  <button id="slideshowToggle" class="toggle-button">►</button>
+  
+  <button id="slideshowToggle" class="toggle-button">
+    <svg class="knob" id="play" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
+      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+      <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
+    </svg>
+  
+    <svg class="knob" id="pause" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pause-circle" viewBox="0 0 16 16" style="display: none;">
+      <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+      <path d="M5 6.25a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5zm3.5 0a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5z"/>
+    </svg>
+  </button>
 
 </div>
 
@@ -304,25 +310,31 @@ function stopSlideshow() {
 }
 
 // Toggle switch event listener
+
 document.getElementById('slideshowToggle').addEventListener('click', function() {
-  if (this.innerHTML === "►") {
-    this.innerHTML = "❚❚";
-    startSlideshow();
-  } else {
-    this.innerHTML = "►";
+  var playIcon = document.getElementById('play');
+  var pauseIcon = document.getElementById('pause');
+
+  if (playIcon.style.display === 'none') {
+    playIcon.style.display = 'block';
+    pauseIcon.style.display = 'none';
     stopSlideshow();
+  } else {
+    playIcon.style.display = 'none';
+    pauseIcon.style.display = 'block';
+    startSlideshow();
   }
 });
-// document.getElementById('slideshowToggle').addEventListener('change', function() {
-//   if (this.checked) {
+
+// document.getElementById('slideshowToggle').addEventListener('click', function() {
+//   if (this.innerHTML === "►") {
+//     this.innerHTML = "❚❚";
 //     startSlideshow();
 //   } else {
+//     this.innerHTML = "►";
 //     stopSlideshow();
 //   }
 // });
-
-
-// setInterval(autoShowSlides, 5000); // Change image every 2 seconds
 
 
 </script>
