--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -112,10 +112,12 @@ order: 3
 
   /* Style the button */
   .toggle-button {
+    position:absolute;
+    top:25%;
+    right:0;
     background-color: #2196F3; /* Blue background */
     border: none; /* No border */
-    padding: 10px; /* Padding for a circle */
-    display: inline-flex; /* Use flexbox for centering */
+    padding: 0; /* Padding for a circle */
     justify-content: center; /* Center content horizontally */
     align-items: center; /* Center content vertically */
     width: 40px; /* Fixed width for a circle */
