--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -122,7 +122,7 @@ order: 3
     align-items: center; /* Center content vertically */
     width: 40px; /* Fixed width for a circle */
     height: 40px; /* Fixed height for a circle */
-    border-radius: 50%; /* Circular shape */
+    /*border-radius: 50%;  Circular shape */
     cursor: pointer; /* Cursor as pointer */
     transition: background-color 0.3s; /* Smooth background transition */
   }
