--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -117,12 +117,12 @@ order: 3
     right:0;
     background-color: #2196F3; /* Blue background */
     border: none; /* No border */
-    padding: 0; /* Padding for a circle */
+    padding: 1px; /* Padding for a circle */
     justify-content: center; /* Center content horizontally */
     align-items: center; /* Center content vertically */
     width: 40px; /* Fixed width for a circle */
     height: 40px; /* Fixed height for a circle */
-    /*border-radius: 50%;  Circular shape */
+    border-radius: /*50%;  Circular shape*/
     cursor: pointer; /* Cursor as pointer */
     transition: background-color 0.3s; /* Smooth background transition */
   }
