--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -110,34 +110,54 @@ order: 3
     opacity: 1;
   }
 
-  /* Style the button */
-  .toggle-button {
-    position:absolute;
-    top:25%;
-    right:0;
-    background-color: #2196F3; /* Blue background */
-    border: none; /* No border */
-    padding: 10px; /* Padding for a circle */
-    justify-content: center; /* Center content horizontally */
-    align-items: center; /* Center content vertically */
-    width: 40px; /* Fixed width for a circle */
-    height: 40px; /* Fixed height for a circle */
-    border-radius: 50%; /* Circular shape*/
-    cursor: pointer; /* Cursor as pointer */
-    transition: background-color 0.3s; /* Smooth background transition */
-  }
+/* Hide the default checkbox */
+.switch input {
+  display: none;
+}
 
-  /* Hover effect */
-  .toggle-button:hover {
-    background-color: #0b7dda; /* Slightly darker blue on hover */
-  }
+/* Style the switch/slider */
+.switch .slider {
+  position: relative;
+  display: block;
+  width: 60px; /* Width of the switch */
+  height: 34px; /* Height of the switch */
+  background-color: #ccc;
+  border-radius: 34px;
+  cursor: pointer;
+  transition: background-color 0.4s;
+}
 
-  /* Style the SVG icons within the button */
-  .toggle-button svg {
-    fill: white; /* White icon color */
-    width: 16px; /* Icon width */
-    height: 16px; /* Icon height */
-  }
+/* Style the SVG icons */
+.switch .icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: opacity 0.3s;
+}
+
+/* Show the play icon by default */
+.switch .play-icon {
+  opacity: 1;
+}
+
+/* Hide the pause icon by default */
+.switch .pause-icon {
+  opacity: 0;
+}
+
+/* Change styles when the switch is checked */
+.switch input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.switch input:checked + .slider .play-icon {
+  opacity: 0;
+}
+
+.switch input:checked + .slider .pause-icon {
+  opacity: 1;
+}
  
 </style>
 
@@ -250,8 +270,23 @@ order: 3
     
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
+
+
+  <label class="switch">
+    <input type="checkbox" id="slideshowToggle">
+    <span class="slider">
+      <svg class="icon play-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
+      </svg>
+      <svg class="icon pause-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16" style="display: none;">
+        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+        <path d="M5 6.25a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5zm3.5 0a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5z"/>
+      </svg>
+    </span>
+  </label>
   
-  <button id="slideshowToggle" class="toggle-button">
+  <!-- <button id="slideshowToggle" class="toggle-button">
     <svg class="knob" id="play" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
       <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
       <path d="M6.271 5.055a.5.5 0 0 1 .52.038l3.5 2.5a.5.5 0 0 1 0 .814l-3.5 2.5A.5.5 0 0 1 6 10.5v-5a.5.5 0 0 1 .271-.445z"/>
@@ -261,7 +296,7 @@ order: 3
       <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
       <path d="M5 6.25a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5zm3.5 0a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5z"/>
     </svg>
-  </button>
+  </button> -->
 
 </div>
 
@@ -315,47 +350,15 @@ function stopSlideshow() {
 }
 
 // Toggle switch event listener
-
-document.getElementById('slideshowToggle').addEventListener('click', function() {
-  var playIcon = document.getElementById('play');
-  var pauseIcon = document.getElementById('pause');
-
-  if (playIcon.style.display !== 'none') {
-    playIcon.style.display = 'none';
-    pauseIcon.style.display = 'block';
+document.getElementById('slideshowToggle').addEventListener('change', function() {
+  if (this.checked) {
     startSlideshow();
   } else {
-    playIcon.style.display = 'block';
-    pauseIcon.style.display = 'none';
     stopSlideshow();
   }
 });
 
 
-// document.getElementById('slideshowToggle').addEventListener('click', function() {
-//   var playIcon = document.getElementById('play');
-//   var pauseIcon = document.getElementById('pause');
-
-//   if (playIcon.style.display === 'none') {
-//     playIcon.style.display = 'block';
-//     pauseIcon.style.display = 'none';
-//     stopSlideshow();
-//   } else {
-//     playIcon.style.display = 'none';
-//     pauseIcon.style.display = 'block';
-//     startSlideshow();
-//   }
-// });
-
-// document.getElementById('slideshowToggle').addEventListener('click', function() {
-//   if (this.innerHTML === "►") {
-//     this.innerHTML = "❚❚";
-//     startSlideshow();
-//   } else {
-//     this.innerHTML = "►";
-//     stopSlideshow();
-//   }
-// });
-
+// setInterval(autoShowSlides, 5000); // Change image every 2 seconds
 
 </script>
