--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -110,53 +110,67 @@ order: 3
     opacity: 1;
   }
 
-/* Hide the default checkbox */
-.switch input {
-  display: none;
-}
-
-/* Style the switch/slider */
-.switch .slider {
+/* The switch - the box around the slider */
+.switch {
   position: relative;
-  display: block;
-  width: 60px; /* Width of the switch */
-  height: 34px; /* Height of the switch */
-  background-color: #ccc;
-  border-radius: 34px;
-  cursor: pointer;
-  transition: background-color 0.4s;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
-/* Style the SVG icons */
-.switch .icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: opacity 0.3s;
-}
-
-/* Show the play icon by default */
-.switch .play-icon {
-  opacity: 1;
-}
-
-/* Hide the pause icon by default */
-.switch .pause-icon {
+/* Hide default HTML checkbox */
+.switch input {
   opacity: 0;
+  width: 0;
+  height: 0;
 }
 
-/* Change styles when the switch is checked */
-.switch input:checked + .slider {
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
   background-color: #2196F3;
 }
 
-.switch input:checked + .slider .play-icon {
-  opacity: 0;
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
 }
 
-.switch input:checked + .slider .pause-icon {
-  opacity: 1;
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
  
 </style>
@@ -271,8 +285,12 @@ order: 3
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
 
-
   <label class="switch">
+    <input type="checkbox" id="slideshowToggle" checked>
+    <span class="slider round"></span>
+  </label>
+
+  <!-- <label class="switch">
     <input type="checkbox" id="slideshowToggle">
     <span class="slider">
       <svg class="icon play-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
@@ -284,7 +302,7 @@ order: 3
         <path d="M5 6.25a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5zm3.5 0a1.25 1.25 0 1 1 2.5 0v3.5a1.25 1.25 0 1 1-2.5 0v-3.5z"/>
       </svg>
     </span>
-  </label>
+  </label> -->
   
   <!-- <button id="slideshowToggle" class="toggle-button">
     <svg class="knob" id="play" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-play-circle" viewBox="0 0 16 16">
