--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -187,6 +187,7 @@ input:checked + .slider:before {
 .slider .play-icon,
 .slider .pause-icon {
   display: none;
+  fill: #1a73e8;
 }
 
 /* Show the play icon by default */
