--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -175,7 +175,7 @@ input:checked + .slider:before {
 
 /* Style for the SVG icons inside the slider */
 .slider .icon {
-  position: absolute;
+  position: relative;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
