--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -148,6 +148,9 @@ order: 3
   background-color: white;
   -webkit-transition: .4s;
   transition: .4s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 input:checked + .slider {
