--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -147,7 +147,7 @@ order: 3
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0);
   -webkit-transition: .4s;
   transition: .4s;
   display: flex;
