--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -112,8 +112,10 @@ order: 3
 
 /* The switch - the box around the slider */
 .switch {
-  position: relative;
-  display: inline-block;
+  position: absolute;
+  /* display: inline-block; */
+  top:25%;
+  right:0;
   width: 60px;
   height: 34px;
 }
