--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -164,7 +164,7 @@ order: 3
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #9c9c9c;
 }
 
 input:focus + .slider {
