--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -336,7 +336,7 @@ input:checked + .slider:before {
   <label class="switch">
     <input type="checkbox" id="slideshowToggle" checked>
     <span class="slider round"></span>
-    <span class="tooltiptext">Toggle Autoplay/span>
+    <span class="tooltiptext">Toggle Autoplay</span>
   </label>
 
 </div>
