--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -135,7 +135,7 @@ order: 3
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: #ccc;
+  background-color: #cccccc75;
   -webkit-transition: .4s;
   transition: .4s;
 
@@ -164,11 +164,11 @@ order: 3
 }
 
 input:checked + .slider {
-  background-color: #9c9c9c;
+  background-color: #9c9c9c75;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #9c9c9c;
+  box-shadow: 0 0 1px #9c9c9c75;
 }
 
 input:checked + .slider:before {
