--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -161,6 +161,7 @@ order: 3
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px; /* Adjust the size as needed */
+  opacity: 0.75;
 }
 
 input:checked + .slider {
@@ -181,6 +182,7 @@ input:checked + .slider:before {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 20px 20px; /* Adjust the size as needed */
+  opacity: 0.75;
 
 }
 
