--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -204,6 +204,7 @@ input:checked + .slider:before {
   background-color: black;
   color: #fff;
   text-align: center;
+  font-size: 12px;
   border-radius: 6px;
   padding: 5px 0;
   position: absolute;
