--- a/_sections/about-me.html
+++ b/_sections/about-me.html
@@ -111,7 +111,7 @@ order: 3
   }
 
 /* The switch - the box around the slider */
-.switch {
+.switchgal {
   position: absolute;
   /* display: inline-block; */
   top:22%;
@@ -121,7 +121,7 @@ order: 3
 }
 
 /* Hide default HTML checkbox */
-.switch input {
+.switchgal input {
   opacity: 0;
   width: 0;
   height: 0;
@@ -198,7 +198,7 @@ input:checked + .slider:before {
 
 
 /* Tooltip text */
-.switch .tooltiptext {
+.switchgal .tooltiptext {
   visibility: hidden;
   width: 120px;
   background-color: black;
@@ -217,7 +217,7 @@ input:checked + .slider:before {
 }
 
 /* Show the tooltip text when you mouse over the tooltip container */
-.switch:hover .tooltiptext {
+.switchgal:hover .tooltiptext {
   visibility: visible;
   opacity: 1;
 }
@@ -336,7 +336,7 @@ input:checked + .slider:before {
   <a class="prev" onclick="plusSlides(-1)">❮</a>
   <a class="next" onclick="plusSlides(1)">❯</a>
 
-  <label class="switch">
+  <label class="switchgal">
     <input type="checkbox" id="slideshowToggle" checked>
     <span class="slider round"></span>
     <span class="tooltiptext">Toggle Autoplay</span>
